update the form of 2_1.md

--- a/_source/2_1.md
+++ b/_source/2_1.md
@@ -4,322 +4,325 @@
 
 ---
 
-  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997607" frameborder=0 allowfullscreen></iframe>
+  <div style="padding: 32px">
+  <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997607" frameborder=0 allowfullscreen></iframe><br />
+  Do you like Chinese food/studying Chinese/him/movies/our city/sports/watching sports/traveling/cars/driving/chasing girls?
+  </div>
 
-Do you like Chinese food/studying Chinese/him/movies/our city/sports/watching sports/traveling/cars/driving/chasing girls?
-
-1. I am...我是    
+1. I am... 我是    
 I am an office worker. 我是上班族。
 
-2. I work for我在……工作  
-I work for the government.我在政府机关做事。
+2. I work for... 我在……工作  
+I work for the government. 我在政府机关做事。
 
-3. I'm happy to我很高兴；我很荣幸  
+3. I'm happy to... 我很高兴；我很荣幸  
 I'm happy to meet you. 我很高兴见到你。
 
-4. I like我喜欢  
+4. I like.. 我喜欢  
 I like your sense of humor. 我喜欢你的幽默感。
 
-5. I'm glad to我很高兴  
+5. I'm glad to... 我很高兴  
 I'm glad to see you again. 我很高兴再次见到你。
 
-6. I'll我会；我将  
+6. I'll... 我会；我将  
 I'll call you. 我会打电话给你。
 
-7. I feel like我想  
-I feel like sleeping/ taking a walk. 我想睡/散步。
+7. I feel like... 我想  
+I feel like sleeping/taking a walk. 我想睡/散步。
 
-8. I want我想要  
+8. I want... 我想要  
 I want something to eat. 我想吃点东西。
 
-9. I need我需要  
+9. I need... 我需要  
 I need your help. 我需要你的帮助。
 
-10. I would like to我想；我愿意  
+10. I would like to... 我想；我愿意  
 I would like to talk to you for a minute. 我想和你谈一下。
-This sentence is so common!
-Hwever ,it usually means you are in for a long discussion about something important.
-American use this sentence before telling their children about sex,
-or warning them about the dangers of drugs!
-Very serious talk follows a very light invitation.
 
-11. I have我有  
+  <div style="border:1px solid #444444; padding: 7px 20px; width:100%">
+  This sentence is so common!<br />
+  However, it usually means you are in for a long discussion about something important.<br />
+  American use this sentence before telling their children about sex, or warning them about the dangers of drugs!<br />
+  Very serious talk follows a very light invitation.
+  </div>
+
+11. I have... 我有  
 I have a lot of problems. 我有很多问题。
 
-12. I hope我希望  
-I hope our dreams come true.我希望我们的梦想成真.
+12. I hope... 我希望  
+I hope our dreams come true. 我希望我们的梦想成真.
 
-13. I'm looking forward to我期待；我期望  
+13. I'm looking forward to... 我期待；我期望  
 I'm looking forward to seeing you. 我期望见到你。
 
-14. I'm supposed to我应该  
+14. I'm supposed to... 我应该  
 I'm supposed to go on a diet/get a raise. 我应该节食/涨工资。
 
-15. I heard我听说  
+15. I heard... 我听说  
 I heard that you're getting married. Congratulations! 听说你要结婚了， 恭喜恭喜!
 
-16. I see我知道  
+16. I see... 我知道  
 I see what you mean. 我了解你的意思。
 
-17. I can't...我不能……  
+17. I can't... 我不能……  
 I can't do this. 我不能这么做。
 
-18. Let me让我  
+18. Let me... 让我  
 Let me explain why I was late. 让我解释迟到的理由。
 
-19. Let's...!让咱们……吧!  
+19. Let's...! 让咱们……吧!  
 Let's have a beer or something. 咱们喝点啤酒什么的。
 
 20. Where is...?  
-Where is your office? 你们的办公室在哪里?
+Where is your office? 你们的办公室在哪里？
 
   <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997624" frameborder=0 allowfullscreen></iframe>
 
-21. What is...?……是什么?  
-What is you plan? 你的计划是什么?
+21. What is...? ……是什么？  
+What is you plan? 你的计划是什么？
 
-22. When is...?什么时候……?  
-When is the store closing? 这家店什么时候结束 营业?
+22. When is...? 什么时候……？  
+When is the store closing? 这家店什么时候结束营业？
 
-23. Would you care to...?要不要  
-Would you cara to see it/sit down for a while?你要不要看/ 坐一会儿呢?
+23. Would you care to...? 要不要……  
+Would you cara to see it/sit down for a while? 你要不要看/坐一会儿呢？
 
-24. Are you sure...?你肯定……吗?  
-Are you sure you can come by at nine?  你肯定你九点能来吗?
+24. Are you sure...? 你肯定……吗？  
+Are you sure you can come by at nine? 你肯定你九点能来吗？
 
-25. Am I allowed to...?我可以……吗?  
-Am I allowed to stay out past 10? 我可以十点过后 再回家吗?
+25. Am I allowed to...? 我可以……吗？  
+Am I allowed to stay out past 10? 我可以十点过后再回家吗？
 
-26. be scheduled to...排定时间或日期  
-The meeting was scheduled for two hours, but it is not over yet.会议原定了两个小时， 不过到现在还没有结束。
+26. be scheduled to... 排定时间或日期  
+The meeting was scheduled for two hours, but it is not over yet. 会议原定了两个小时，不过到现在还没有结束。
 
-27. birthday is...生日是在……  
-Tom's birthday is this week. 汤姆的生日就在 这个星期。
+27. birthday is... 生日是在……  
+Tom's birthday is this week. 汤姆的生日就在这个星期。
 
-28. Can you...?能请你……吗?  
-Can you cover for me on Friday/help me/tell me how to get there? 星期五能不能请你 替我个班/你能帮我吗 /你能告诉我到那里怎 么走吗?
+28. Can you...? 能请你……吗？  
+Can you cover for me on Friday/help me/tell me how to get there? 星期五能不能请你替我个班/你能帮我吗/你能告诉我到那里怎么走吗？
 
-29. Could you...能否请你……  
-Could you do me a big favor? 能否请你帮我个忙?
+29. Could you... 能否请你……  
+Could you do me a big favor? 能否请你帮我个忙？
 
-30. crazy about...对……很着迷  
+30. crazy about... 对……很着迷  
 He is crazy about Crazy English. 他对疯狂英语很着迷。
 
-31. Can you imagine...?你能想像……吗?  
-Can you imagine how much he paid for that car? 你能想像他那部车付 了多少钱吗?
+31. Can you imagine...? 你能想像……吗？  
+Can you imagine how much he paid for that car? 你能想像他那部车付了多少钱吗？
 
-32. Can you believe...?你相信……?  
-Can you believe that I bought a TV for $25? 你相信我用25美元 买了一台电视吗?
+32. Can you believe...? 你相信……？  
+Can you believe that I bought a TV for $25? 你相信我用25美元买了一台电视吗？
 
-33. Did you know...?你知道……吗?  
-Did you know he was having an affair/ cheating on his wife? 你知道他有外遇了吗 /欺骗他的妻子吗?
+33. Did you know...? 你知道……吗？  
+Did you know he was having an affair/cheating on his wife? 你知道他有外遇了吗/欺骗他的妻子吗？
 
-34. Did you hear about...?你听说……了吗? 你知道……吗?  
-Did you hear about the new project? 你知道那个新项目吗?
+34. Did you hear about...? 你听说……了吗？你知道……吗？  
+Did you hear about the new project? 你知道那个新项目吗？
 
-35. Do you realize...?你知道……吗?  
-Do you realize that all of these shirts are half off? 你知道这些衬衫都卖 半价吗?
+35. Do you realize...? 你知道……吗？  
+Do you realize that all of these shirts are half off? 你知道这些衬衫都卖半价吗？
 
-36. Do you mind if I...?你介意……吗?  
-Do you mind if I take tomorrow off? 你介意我明天请假吗?
+36. Do you mind if I...? 你介意……吗？  
+Do you mind if I take tomorrow off? 你介意我明天请假吗？
 
-37. enjoy...很喜欢……  
-I enjoy working with you very much. 我很喜欢和你一 起工作。
+37. enjoy... 很喜欢……  
+I enjoy working with you very much. 我很喜欢和你一起工作。
 
-38. ended up...最终是……  
-Did you know that Stone ended up marrying his secretary?你知道吗?石头最终和 他的秘书结婚了。
+38. ended up... 最终是……  
+Did you know that Stone ended up marrying his secretary? 你知道吗？石头最终和他的秘书结婚了。
 
-39. get together...聚在一起……  
-Let's get together for lunch. 让我们聚在一起吃顿 午餐吧。
+39. get together... 聚在一起……  
+Let's get together for lunch. 让我们聚在一起吃顿午餐吧。
 
-40. getting...for...获得……以作为……  
+40. getting...for... 获得……以作为……  
 I'm getting a new computer for birthday present. 我得到一台新电脑， 作为我的生日礼物。
 
   <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997632" frameborder=0 allowfullscreen></iframe>
 
-41. How did you do on...?你……的表现如何?  
-How did you do on your test? 你这次考试的结果 如何?
+41. How did you do on...? 你……的表现如何？  
+How did you do on your test? 你这次考试的结果如何？
 
-42. Do you think...?你认为……?  
-Do you think you can come? 你认为你能来吗?
+42. Do you think...? 你认为……?  
+Do you think you can come? 你认为你能来吗？
 
-43. How was...?……还好吧?  
-How was your weekend? 你周末过得怎么样?
+43. How was...?……还好吧？  
+How was your weekend? 你周末过得怎么样？
 
-44. Here...在这里，这是……  
+44. Here... 在这里，这是……  
 Here is my card. 这是我的名片。
 
-45. be used to...他习惯于……  
-He is used to eating out all the time. 他已经习惯了在 外面吃饭。
+45. be used to... 他习惯于……  
+He is used to eating out all the time. 他已经习惯了在外面吃饭。
 
-46. Have you ever...?你有没有……?  
+46. Have you ever...? 你有没有……?  
 Have you ever driven a BMW? 你有没有开过"宝马"?
 
-47. How about...?……怎么样?  
-How about if we go tomorrow instead? 我们改成明天去 怎么样?
+47. How about...?……怎么样？  
+How about if we go tomorrow instead? 我们改成明天去怎么样？
 
-48. How do you like...?你喜欢……吗?  
-How do you like Hong Kong? 你喜欢香港吗?
+48. How do you like...? 你喜欢……吗？  
+How do you like Hong Kong? 你喜欢香港吗？
 
-49. How do you want...?你要怎么样的……?  
-How do you want your steak? 你的牛排要几分熟?
+49. How do you want...? 你要怎么样的……?  
+How do you want your steak? 你的牛排要几分熟？
 
-50. How did...do...?如何做到……?  
-How did Mary make all of her money? 玛丽所有的钱是 怎么赚到的?
+50. How did...do...? 如何做到……?  
+How did Mary make all of her money? 玛丽所有的钱是怎么赚到的？
 
-51. How did...?……进行得怎么样?  
-How did the game turn our? 球赛结果怎么样?
+51. How did...?……进行得怎么样？  
+How did the game turn our? 球赛结果怎么样？
 
-52. How was...?……怎么样?  
-How was your date? 你的约会怎么样?
+52. How was...?……怎么样？  
+How was your date? 你的约会怎么样？
 
-53. How are you doing with...?……做得如何?  
-How are you doing with your new boss? 你跟你的新上司 处得如何?
+53. How are you doing with...?……做得如何？  
+How are you doing with your new boss? 你跟你的新上司处得如何？
 
-54. How should I...?我该如何……?  
-How should I tell him the bad news? 我该如何告诉他 这个坏消息?
+54. How should I...? 我该如何……?  
+How should I tell him the bad news? 我该如何告诉他这个坏消息？
 
-55. How much...?多少……?  
-How much money did you make? 你赚了多少钱?
+55. How much...? 多少……?  
+How much money did you make? 你赚了多少钱？
 
-56. How much does it cost to...?……要多少钱?  
-How much does it cost to go abroad? 出国要多少钱?
+56. How much does it cost to...?……要多少钱？  
+How much does it cost to go abroad? 出国要多少钱？
 
-57. How long will it take to...?去……要多久?  
-How long wil it take to get to your house? 到你家要多久?
+57. How long will it take to...? 去……要多久？  
+How long wil it take to get to your house? 到你家要多久？
 
-58. How long have you...?你……多久了?  
-How long have you been here? 你在这里多久了?
+58. How long have you...? 你……多久了？  
+How long have you been here? 你在这里多久了？
 
 59. How!多么!真!  
 How nice/pretty/cold/ funny/stupid/boring/ interesting 真好!……
 
-60. How about...?……如何?……怎么样?  
-How about going out for dinner? 出去吃晚餐如何?
+60. How about...?……如何？……怎么样？  
+How about going out for dinner? 出去吃晚餐如何？
 
   <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997650" frameborder=0 allowfullscreen></iframe>
 
 61. I'm sorry... 我对……很遗憾难过。  
-I'm sorry that you didn't get the job. 很遗憾，你没有得到 那份工作。
+I'm sorry that you didn't get the job. 很遗憾，你没有得到那份工作。
 
-62. I'm afraid...我恐怕……  
+62. I'm afraid... 我恐怕……  
 I'm afraid that it's not going to work out. 我恐怕这事不会成的。
 
-63. I guess...我想……  
+63. I guess... 我想……  
 I guess I could come over. 我想我能来。
 
-64. Is it okay to...? ……可以吗?  
-Is it okay to smoke in the office? 在办公室里抽烟 可以吗?
+64. Is it okay to...? ……可以吗？  
+Is it okay to smoke in the office? 在办公室里抽烟可以吗？
 
 65. It was kind of... 有一点……  
 It was kind of exciting. 有一点刺激。
 
-66. I know what...我知道……是什么。  
+66. I know what... 我知道……是什么。  
 I know what you want. 我知道你想要什么。
 
-67. Is that why...?就是这个缘故才 导致……吗?  
-Is that why you don't want to go home? 就是这个缘故，你才 不想回家的吗?
+67. Is that why...? 就是这个缘故才导致……吗？  
+Is that why you don't want to go home? 就是这个缘故，你才不想回家的吗？
 
-68. I'm sure...我很肯定……  
-I'm sure we can get you a great/good deal. 我很肯定我们可以帮 你做成一笔好交易。
+68. I'm sure... 我很肯定……  
+I'm sure we can get you a great/good deal. 我很肯定我们可以帮你做成一笔好交易。
 
 69. help...with帮忙做……  
-Would you help me with the report? 你愿意帮我写报告吗?
+Would you help me with the report? 你愿意帮我写报告吗？
 
-70. I didn't know...我不知道  
-I didn't know he was the richest person in the world. 我不知道他是全世界 最有钱的人。
+70. I didn't know... 我不知道  
+I didn't know he was the richest person in the world. 我不知道他是全世界最有钱的人。
 
-71. I'll have to...我必须……  
-I'll have to ask my boss/wife first. 我必须先问一下 我的老板/老婆。
+71. I'll have to... 我必须……  
+I'll have to ask my boss/wife first. 我必须先问一下我的老板/老婆。
 
-72. I take it...这么说来， 我认定你是……  
-I take it you don't agree. 这么说来，我认为你 是不同意。
+72. I take it... 这么说来， 我认定你是……  
+I take it you don't agree. 这么说来，我认为你是不同意。
 
-73. I tried...我试过……  
+73. I tried... 我试过……  
 I tried losing weight, but nothing worked. 我曾试着减肥， 但是毫无效果。
 
-74. It makes no sense to...做……丝毫不可理解  
+74. It makes no sense to... 做……丝毫不可理解  
 It doesn't make any sense to get up so early. 那么早起来， 没有任何意义。
 
-75. It feels like...它感觉上像是……  
-It feels like spring/ I've been here before. 感觉好像春天到了/ 感觉好像我以前来过 这里。
+75. It feels like... 它感觉上像是……  
+It feels like spring/ I've been here before. 感觉好像春天到了/ 感觉好像我以前来过这里。
 
-76. It took+  表示时间的词+to...做 某事花了 时间  
-It took years of hard work to speak good English. 讲一口流利的英语 需要多年的刻苦操练。
+76. It took+  表示时间的词+to... 做某事花了时间  
+It took years of hard work to speak good English. 讲一口流利的英语需要多年的刻苦操练。
 
-77. I wonder if...我在想是否……  
-I wonder if they can make it. 我在想他们是不是 能办得到。
+77. I wonder if... 我在想是否……  
+I wonder if they can make it. 我在想他们是不是能办得到。
 
-78. It's not as...as...它不像……一样……  
-It's not as cold/hot as it was yesterday. 今天的天气不像昨天 的那么冷/热。
-It's not as easy as you think. 它不像你想象的 那么容易。
+78. It's not as...as... 它不像……一样……  
+It's not as cold/hot as it was yesterday. 今天的天气不像昨天的那么冷/热。
+It's not as easy as you think. 它不像你想象的那么容易。
 
-79. It's not..., it's...不是……的问题， 而是……  
-It's not his work that bothers me it's his attitude. 因扰我的不是他的 工作，而是他的态度。
+79. It's not..., it's... 不是……的问题， 而是……  
+It's not his work that bothers me it's his attitude. 因扰我的不是他的工作，而是他的态度。
 
-80. It sounds...听起来……  
-It sounds like you enjoyed it. 听起来你好像蛮喜 欢的。
+80. It sounds... 听起来……  
+It sounds like you enjoyed it. 听起来你好像蛮喜欢的。
 
   <iframe height="36" width="260" src="http://www.ximalaya.com/swf/sound/orange.swf?id=12997672" frameborder=0 allowfullscreen></iframe>
 
-81. It seems...好像……  
-It seems to me that he would like to go back home. 我觉得他好像想要 回家。
+81. It seems... 好像……  
+It seems to me that he would like to go back home. 我觉得他好像想要回家。
 
-82. It looks...看起来……  
+82. It looks... 看起来……  
 It looks very nice. 看起来很漂亮。
 
-83. Is everything...? 一切都……吗?  
-Is everything under control? 一切都在掌握之中吗?
+83. Is everything...? 一切都……吗？  
+Is everything under control? 一切都在掌握之中吗？
 
-84. I thought...我以为……  
-I thought you could do a better job. 我以为你的表现会 更好。
+84. I thought... 我以为……  
+I thought you could do a better job. 我以为你的表现会更好。
 
-85. It's time to...是……的时候了。  
+85. It's time to... 是……的时候了。  
 It's time for us to say"No"to America. 是我们对美国说 "不"的时候了。
 
-86. It's supposed to...那应当是……  
-The show is supposed to be good. 这场表演应当是 相当好的。
+86. It's supposed to... 那应当是……  
+The show is supposed to be good. 这场表演应当是相当好的。
 
-87. It really depends on...那全看……情况而定。  
+87. It really depends on... 那全看……情况而定。  
 It really depends on who is in charge. 那纯粹要看谁负责了。
 
-88. It involves a lot of...那要牵涉到很多……  
-It involves a lot of hard work. 那需要很多的 辛勤工作。
+88. It involves a lot of... 那要牵涉到很多……  
+It involves a lot of hard work. 那需要很多的辛勤工作。
 
 89. in...favor对……有利  
 That might be in your favor. 那可能对你有利。
 
-90. I didn't realize...我不知道……  
-I didn't realize how much this meant to you. 我不知道这个对你 意义有多大。
+90. I didn't realize... 我不知道……  
+I didn't realize how much this meant to you. 我不知道这个对你意义有多大。
 
-91. I didn't mean to...我不是故意……  
+91. I didn't mean to... 我不是故意……  
 I didn't mean to offend you. 我不是故意冒犯你。
 
-92. I was wondering if...我想知道……  
-I was wondering if you were doing anything this weekend. 我想知道这个周末 你有什么要做。
+92. I was wondering if... 我想知道……  
+I was wondering if you were doing anything this weekend. 我想知道这个周末你有什么要做。
 
-93. May I...?我可以……吗?  
+93. May I...? 我可以……吗？  
 May I have you attention, please? 请大家注意一下。
 
-94. This is great... weather.这是个……的好天气。  
+94. This is great... weather. 这是个……的好天气。  
 This is great golfing /swimming/picnic weather. 这是个打高尔夫球/ 游泳/野餐的好天气。
 
-95. Thanks for... Thanks for taking me to the movie.谢谢你……  谢谢你带我去看电影。  
+95. Thanks for... Thanks for taking me to the movie. 谢谢你……  谢谢你带我去看电影。  
 
-96. too...to...太……以致于不能……  
+96. too...to... 太……以致于不能……  
 I am too tired to speak. 我累得说不出话来。
 
-97. There is...有……  
-There is a TV show about AIDS on right now. 电视正播映一个有 关爱滋病的节目。
+97. There is... 有……  
+There is a TV show about AIDS on right now. 电视正播映一个有关爱滋病的节目。
 
-98. Would you...?你能……  
-Whould you tell me your phone number? 你能告诉我你的电话 号码吗?
+98. Would you...? 你能……  
+Whould you tell me your phone number? 你能告诉我你的电话号码吗？
 
-99. Where did you...?你从哪里……呢?  
-Where did you learn to speak English? 你从哪里学会说 英语的呢?
+99. Where did you...? 你从哪里……呢？  
+Where did you learn to speak English? 你从哪里学会说英语的呢？
 
-100. What do you think of...?你认为……如何?  
-What do you think of his new job/this magazine? 你对他的新工作/ 这本杂志看法如何?
+100. What do you think of...? 你认为……如何？  
+What do you think of his new job/this magazine? 你对他的新工作/ 这本杂志看法如何？
 
-101. What makes you…?什么事让你……呢？  
-What makes you change your mind? 什么事让你改变了 主意？你不是说这一次学 英语一定要坚持到 底吗？！
+101. What makes you…? 什么事让你……呢？  
+What makes you change your mind? 什么事让你改变了主意？你不是说这一次学英语一定要坚持到底吗？！
